# catalan-stt

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  evaluation_results.txt  pyproject.toml  pytest.ini  requirements.txt  spanish-stt-data.tar.gz.REMOVED.git-id
.github/workflows/: ci.yml
configs/: base.yaml  default.yaml
configs/regions/: argentina.yaml  chile.yaml  mexico.yaml  spain.yaml
data/raw/chilean-spanish/: line_index_female.tsv  line_index_male.tsv  transcripts.tsv
data/raw/ciempiess/: DOWNLOAD_INSTRUCTIONS.txt  ciempiess_LDC2015S07.tgz.REMOVED.git-id  index.html
data/raw/ciempiess/docs/: README.txt
data/raw/common-voice-argentina/: train_manifest.json
data/raw/common-voice-mexico/: train_manifest.json
data/raw/common-voice-spain/: train_manifest.json
data/raw/openslr-argentina/: argentine_spanish_speech_ope.textClipping  transcripts.tsv
data/raw/spanish-conversational/: DOWNLOAD_INSTRUCTIONS.txt
data/raw/spanish-conversational/Spanish_Conversational_Speech_Corpus/: AUDIOINFO.txt  README.txt  SPKINFO.txt
data/raw/tedx-spanish/: tedx_spanish_corpus.tar.REMOVED.git-id  transcripts.tsv
data/slang/: argentina.json  chile.json  mexico.json  spain.json  vocabulary.json
data/splits/: all.json  test.json  train.json  val.json
data/synthetic/: manifest.json
data/transcripts/: catalan_spanish_full.csv  selected_dialogues_for_recording.json  spanish_slang_phrases.csv
demo/: index.html
huggingface/: spanish-slang-stt-data-README.md
models/catalan-whisper/: evaluation_results.json
models/spanish-slang-whisper-unified/: evaluation_results.json
scripts/: download_datasets.py  eval_model.py  evaluate.py  generate_synthetic.py  opensubtitles_scraper.py  prepare_datasets.py  prepare_recording_prompts.py  runpod_setup.sh  slang_miner.py  train.py  train_all_dialects.py  train_regional.py  upload_model.py  upload_to_hf.py
src/: __init__.py
src/api/: __init__.py  app.py  models.py  transcriber.py
src/data/: __init__.py  loader.py  preprocessing.py  synthetic.py
src/evaluation/: __init__.py  benchmark.py  metrics.py
src/training/: __init__.py  config.py  trainer.py
tests/: __init__.py  conftest.py  test_api.py  test_data_loader.py  test_evaluation.py
(+16847 files in other folders)
